
GH  262	Some IMAP servers send EXPUNGE responses for unknown messages
GH  278	BODYSTRUCTURE Parser fails on specific IMAP Server response 
GH  283	clean up connections when closing IMAPStore
GH  287	Allow relaxed Content-Disposition parsing
GH  289	use a different IMAP tag prefix for each connection
GH  291	define JDK 9 module name for JavaMail
GH  296	HTTP proxy support needs to use HTTP/1.1


		  CHANGES IN THE 1.6.0 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.6.0 release.

GH   75	MimeMultipart should throw ParseException for parsing errors
GH   77	MimeMessage.updateHeaders should set the Date header if not already set
GH   93	Support addressing i18n via RFC 6530/6531/6532
GH  104	The UIDFolder interface should have a getter for UIDNEXT
GH  135	MailHandler should choose a better default subject formatter.
GH  159	Store, Transport, and Folder should implement AutoCloseable
GH  174	MailDateFormat changes for version 1.6
GH  183	Fix javac warnings
GH  209	fails to parse some fetch response that has space before final ')'
GH  214	IMAP doesn't handle illegal CAPABILITY response after LOGIN/AUTHENTICATE
GH  226	MailSessionDefinition should use the Repeatable annotation for Java EE 8
GH  227	IdleManager fails on Android
GH  228	Test fails: javax.mail.internet.GetLocalAddressTest
GH  229	Tests fail: com.sun.mail.util.WriteTimeoutSocketTest
GH  230	MboxFolder.expunge can corrupt mailbox file
GH  231	CompactFormatter should handle overridden Throwable.toString methods
GH  232	Update public API to use generics
GH  233	Malformed IMAP FETCH response throws the wrong exception
GH  234	RFC822.SIZE > 2GB isn't handled
GH  237	Protocol#command method call readResponse after IOException is thrown
GH  238	Possible NPE in Status.<init> line 96
GH  239	MailHandler should support 'login' verify type.
GH  240	MailHandler support for non-multipart messages
GH  241	use of YoungerTerm/OlderTerm on server without WITHIN support fails